--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=com.java:MavenBuild
+sonar.projectKey=com.java:MavenBuild/VasuSheoran
 sonar.sources=src/main/java
 sonar.tests=src/test/java
 sonar.java.binaries=target/classes
