--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,16 +42,16 @@ jobs:
        name: buildArtifact
        path: target/*.war      
       
-  # deploy:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   steps:
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
   #    - uses: actions/download-artifact@v3
   #      with:
   #        name: buildArtifact
-  #    - name: Production Deployment
-  #      run: |
-  #         ls -lart 
+     - name: Production Deployment
+       run: |
+          ls -lart 
   #    - name: scp ssh pipelines
   #      uses: cross-the-world/ssh-scp-ssh-pipelines@latest
   #      env:
