--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,51 +18,5 @@ on:
 env:
   mavenGoal: "clean install"
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    env:
-      buildScript: "pom.xml"
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: "mvn -B ${mavenGoal} --file ${buildScript}"
-    # - name: SonarQube Scan
-    #   uses: sonarsource/sonarqube-scan-action@master
-    #   env:
-    #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-    - uses: actions/upload-artifact@v3
-      with:
-       name: buildArtifact
-       path: target/*.war      
-      
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-     - uses: actions/download-artifact@v3
-       with:
-         name: buildArtifact
-     - name: Production Deployment
-       run: |
-          mv java-example.war Vasu.war
-          ls -lart 
-     - name: scp ssh pipelines
-       uses: cross-the-world/ssh-scp-ssh-pipelines@latest
-       env:
-         LASTSSH: "Doing something after copying"
-       with:
-         host: ${{ secrets.DC_HOST }}
-         user: ${{ secrets.DC_USER }}
-         pass: ${{ secrets.DC_KEY }}
-         scp: |
-          ./*.war => /tmp/
-         last_ssh: |
-            sudo cp /tmp/Vasu.war /var/lib/tomcat9/webapps/Vasu.war
-            ls -la
+  call-checkout-in-GithubActions-repo:
+    uses: vasusheoran/GithubActions/.github/workflows/deploy.yml@main
