--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,7 +21,7 @@ jobs:
   call-checkout-in-GithubActions-repo:
     uses: vasusheoran/GithubActions/.github/workflows/checkout.yml@main
   call-build-in-GithubActions-repo:
-    uses: vasusheoran/GithubActions/.github/workflows/maven-build.yml@main
+    uses: vasusheoran/GithubActions/.github/workflows/build.yml@main
   call-deploy-in-GithubActions-repo:
     needs: call-build-in-GithubActions-repo
     uses: vasusheoran/GithubActions/.github/workflows/deploy.yml@main
