--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,6 +21,12 @@ env:
 jobs:
   call-build-in-GithubActions-repo:
     uses: vasusheoran/GithubActions/.github/workflows/build.yml@main
+    with:
+      build-script: pom.xml
   call-deploy-in-GithubActions-repo:
     needs: call-build-in-GithubActions-repo
     uses: vasusheoran/GithubActions/.github/workflows/deploy.yml@main
+    secrets:
+       host: ${{ secrets.DC_HOST }}
+       user: ${{ secrets.DC_USER }}
+       password: ${{ secrets.DC_KEY }}
